Fixed navbar & scaling issues on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@ body {
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23f1f2f6' fill-opacity='0.63'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
-.navbar {
-  height: 10vh;
-}
 
 .navbar a {
   margin-right: 20px;
@@ -17,42 +14,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   letter-spacing: .2em;
 }
 
-/* Hamburger */
-
-.hamburger {
-  width: 35px;
-  position: absolute;
-  right: 40px;
-  top: 10px;
-  cursor: pointer;
-}
-
-.bar1, .bar2, .bar3 {
-  background-color: #000;
-}
-
-.bar1 {
-  width: 35px;
-  height: 3px;
-  margin: 6px 0;
-  transition: 0.4s;
-  float: right;
-}
-
-.bar2 {
-  width: 15px;
-  height: 3px;
-  
-  transition: 0.4s;
-  float: right;
-}
-
-.bar3 {
-  width: 25px;
-  height: 3px;
-  margin: 6px 0;
-  transition: 0.4s;
-  float: right;
+.navbar-collapse {
+  text-align: center;
 }
 
 /* Buttons */
@@ -150,6 +113,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .option-input:checked::before {
   height: 40px;
   width: 40px;
+  color: #FFF;
   position: absolute;
   content: '✔';
   display: inline-block;
